# self_collision

./: CMakeLists.txt  package.xml
config/: self_collision_test.ops
include/self_collision_test/: urdf_collision_parser.h
launch/: self_collision_test.launch
qhull_calculator/: CMakeLists.txt  package.xml
qhull_calculator/src/: qhull_calculator.cpp
qhull_msgs/qhull_msgs/: CMakeLists.txt  package.xml
qhull_msgs/qhull_msgs/msg/: PointList.msg  PointLists.msg  Qhull.msg  QhullList.msg
qhull_msgs/rtt_qhull_msgs/: CMakeLists.txt  package.xml
self_collision/: CMakeLists.txt  package.xml
self_collision/config/: self_collision_test.ops  self_collision_test.ops~
self_collision/include/self_collision/: urdf_collision_parser.h
self_collision/launch/: self_collision_test.launch
self_collision/src/: distance.cpp  distance.h  geometric_shapes.h  gjk.h  marker_publisher.cpp  math_details.h  narrowphase.cpp  self_collision_avoidance.cpp  self_collision_avoidance.h  transform.cpp  urdf_collision_parser.cpp
src/: AABB.h  collision_object.h  data_types.h  distance_measure.cpp  distance_measure.h  geometric_shapes.cpp  geometric_shapes.h  gjk.cpp  gjk.h  intersect.cpp  intersect.h  marker_publisher.cpp  marker_publisher.h  math_details.h  matrix_3f.h  motion_base.h  narrowphase.cpp  narrowphase.h  qhull_calculator.cpp  qhull_calculator.h  qhull_data.cpp  qhull_data.h  qhull_interface.cpp  qhull_interface.h  qhull_test.cpp  self_collision_avoidance.cpp  self_collision_avoidance.h  transform.cpp  transform.h  urdf_collision_parser.cpp  urdf_collision_parser.h  vec_3f.h
